--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Library/
+Temp/
+Obj/
+Build/
+Builds/
+Logs/
+Packages/manifest.json
+Packages/packages-lock.json
